ErrorResponse and swagger upd
